--- a/understand_cont.html
+++ b/understand_cont.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+	<script src="js/greeting_cont.js" ></script>
+
 	<body>
 
-		<div ng-app="cont">
-			 
+		<div ng-app="myApp" ng-controller="GreetingController">
+ 
 			<p>Input something in the input box:</p>
-			<p>Name : <input type="text" ng-model="name" placeholder="Enter name here"></p>
-			<h1>Hello {{name}}</h1>
-
+			<p>Name : <input type="number" min='0'  ng-model="name" placeholder="Enter name here"></p>
+			<p>Hello {{double(name)}}</p>
+			{{greeting}}	
 		</div>
 
 	</body>
